# e17.beer

./: .gitignore  404.html  AGENTS.md  BlackhorseBeerMile_HappyHours.xlsx  E17_brewery_ids_urls_gname-mapping.json  Gemfile  Justfile  Makefile  OGMaps.py  _config.yml  generate_place_ids.py  hours.html  places_data.json  test__update_places.py  test_generate_place_ids.py  test_update_places.py  tests__update_places.py  update_places.py
.github/: dependabot.yml
.github/workflows/: copilot-setup-steps.yml
_data/: .gitattributes  .rgignore  links.yaml  places.json  social.yaml
_includes/: .rgignore  hours
_scripts/: .gitignore  E17_BHMplus_data.json  E17_brewery_ids_urls_gname-mapping.json  Justfile  conftest.py  fetch_venue_metadata.py  generate_place_ids.py  hours-table.html  hours-table.py  places-textconv.jq  pyproject.toml  test_fetch_venue_metadata.py  test_generate_place_ids.py  test_update_places.py  update_places.py  utils.py
_scripts/_data/: .fdignore  places.json  venue_metadata.json
hours/: index.html  manifest.json
hours/_includes/: script.js  style.css
