[project]
name = "e17-beer-scripts"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "google-maps-places>=0.8",
    "pandas>=3",
    "python-dotenv>=1.2",
    "tqdm>=4",
]

[dependency-groups]
dev = [
    "mypy>=1.20",
    "pandas-stubs>=3",
    "pytest>=9",
    "types-tqdm>=4",
]

[tool.setuptools]
packages = []  # disable automatic discovery

[tool.ruff]
line-length = 120

[tool.mypy]
python_executable = ".venv/bin/python3"
